--- a/style.css
+++ b/style.css
@@ -1,27 +1,50 @@
 * {
-    background-color: antiquewhite;
+    box-sizing: border-box;
 }
-.navbar {
-    padding-left: 0px;
-    
-}
-.navbar a {
-    text-decoration:none;
-}
-
-.navbar li {
-    list-style: none; 
-}
-
-img {
-    height: auto;
-    width: 200px;
-}
-
-h1, h2 {
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-h1 {
+a {
+    text-decoration: none;
+    font-size: larger;
     font-weight: bold;
+    color: black;
+}
+a:hover {
+    color: blueviolet;
+}
+
+body {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80rem;
+    background-color: blanchedalmond;
+    line-height: 1.5;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+li {
+    list-style: none;
+}
+
+.flex-container {
+    display: flex;
+    border: 4px solid sandybrown;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+    margin-bottom: 20px;
+}
+
+.flex-container ul {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.flex-container li {
+    flex: 1 0 auto;
+    gap: 8px;
+    padding: 16px;
+}
+
+.flex-container h1 {
+    padding-left: 20px;
 }
