--- a/recipies/recipes.css
+++ b/recipies/recipes.css
@@ -1,20 +1,74 @@
 * {
-    background-color: antiquewhite;
+    box-sizing: border-box;
 }
 
-h1, h2 {
-    font-family: Arial, Helvetica, sans-serif;
+a {
+    text-decoration: none;
+    font-size: larger;
+    font-weight: bold;
+    color: black;
+}
+a:hover {
+    color: blueviolet;
 }
 
+body {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+li {
+    list-style: none;
+}
 h1 {
     font-weight: bolder;
 }
+
 h2 {
     font-weight: bold;
 }
 
-img {
-    height: auto;
-    width: 200px;
+.flex-container {
+    display: flex;
+    border: 4px solid sandybrown;
+    justify-content: space-between;
+    align-items: center;
+    padding: 16px;
+    margin-bottom: 20px;
 }
 
+.flex-container ul {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.flex-container li {
+    flex: 1 0 auto;
+    gap: 8px;
+    padding: 16px;
+}
+
+.flex-container h1 {
+    padding: 20px;
+}
+.container {
+    border: 4px solid sandybrown;
+    background-color: floralwhite;
+    padding-left: 36px;
+}
+.parent {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.parent div {
+    flex: 1;
+    padding-right: 16px;
+}
+
+.ingredients, .directions, .description{
+    line-height: 1.5;
+}
